<resources>
    <string name="app_name">ChatAppJava</string>
    <string name="creteNewAccount">Create New Account</string>
    <string name="addImage">Add image</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm password</string>
    <string name="signin">SIGN IN</string>
    <string name="signup">Sign up</string>
    <string name="fullname">Full name</string>
    <string name="welcomeBack">Welcome Back!</string>
    <string name="loginToContinue">Login to continue</string>
    <string name="incorrectUsername">Incorrect username</string>
    <string name="incorrectFullName">Incorrect Full name</string>
    <string name="incorrectEmail">Incorrect Email</string>
    <string name="incorrectPassword">Incorrect Password</string>
    <string name="notSamePassword">Both passwords must be the same</string>
    <string name="usernameExists">Username already exists</string>
    <string name="noUser">There is no user with this username and password</string>
    <string name="message_hint">Say anything</string>
    <string name="send">Send</string>
    <string name="profile_me">My Profile Pic</string>
    <string name="profile_other">Other profile pic</string>
    <string name="hint_enter_a_message">Enter your message</string>
    <string name="message">Message</string>
    <string name="time">00:00</string>
    <string name="nameOfUser">Name of user</string>
    <string name="TypeMessage">Type a message</string>
    <string name="contacts">Remove friend</string>
    <string name="friendRequests">Friend requests</string>
    <string name="searchFriends">Search for friend</string>
    <string name="home">Contacts</string>
    <string name="removedUser">User has been removed from friend list</string>
    <string name="sendFriendRequest">Friend request is sended</string>
    <string name="userAccepted">User has been accepted</string>
    <string name="userDeclined">User has been declined</string>
    <string name="activateAcc">Please enter the code from your email to activate the account</string>
    <string name="code">Code</string>
    <string name="confirmCode">Confirm code</string>
    <string name="noContacts">You have no contacts</string>
    <string name="noFriendRequests">There is no more friend requests</string>
    <string name="noContactsForRemove">There is no more contacts for remove</string>
</resources>